--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>OUR TEAM</title>
 </head>
 <body>
+    <div id="team-info"></div>
     <script src="js/script.js"></script>
 </body>
 </html>
