--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <title>OUR TEAM</title>
 </head>
 <body>
-    <div id="team-info"></div>
+    <h1>OUR TEAM</h1>
+    <div id="team-info">
+        <div id="card">
+            <div id="img"></div>
+        </div>
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
